Revert "Fix the visualization of paginated comments on mobile"
This reverts commit 76a4d4d6010601dde30b3bb86d6032743467ec7f.

--- a/scss/_proposal.scss
+++ b/scss/_proposal.scss
@@ -88,10 +88,6 @@
   }
 
   #comments {
-    height: 1500px;
+    overflow: auto;
   }
-}
-.large #proposal #comments {
-  height: auto;
-  overflow: hidden;
 }
