--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -7949,11 +7949,7 @@ html .modal, html .scroll-content {
       text-decoration: underline;
       cursor: pointer; }
   #proposal #comments {
-    height: 1500px; }
-
-.large #proposal #comments {
-  height: auto;
-  overflow: hidden; }
+    overflow: auto; }
 
 .sidebar h2 {
   font-size: 16px;
